Fixed bottom spacing on footer.

--- a/main.css
+++ b/main.css
@@ -55,7 +55,7 @@ footer {
     position: fixed;
     left: 0;
     bottom: 0;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
     width: 100%;
     color: rgb(224, 224, 224);
 }
